Paxtools-6: reverted back some of my previous refactoring - - using Set instead of Collection in the query and pattern methods